workspace-sf/force-app/main/default/objects/RemuneracaoProdutoParceiro__c/RemuneracaoProdutoParceiro__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o parceiro e o tipo de remuneração.</description>
    <label>Remuneração do produto do parceiro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remunerações do produto do parceiro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>