workspace-sf/force-app/main/default/objects/RemuneracaoProdutoParceiro__c/fields/ProdutoParceiro__c.field-meta.xml
<CustomField>
    <fullName>ProdutoParceiro__c</fullName>
    <label>Produto do parceiro</label>
    <referenceTo>ProdutoParceiro__c</referenceTo>
    <relationshipLabel>Remunerações do produto do parceiro</relationshipLabel>
    <relationshipName>RemuneracoesProdutoParceiro</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>