workspace-sf/force-app/main/default/objects/RemuneracaoProdutoParceiro__c/fields/RemuneracaoProduto__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remuneração do produto</label>
    <referenceTo>RemuneracaoProduto__c</referenceTo>
    <relationshipName>RemuneracoesProdutoParceiro</relationshipName>
    <type>Lookup</type>
</CustomField>